--- a/src/app/features/gis/components/setups/components/clause/clauses/clauses.component.html
+++ b/src/app/features/gis/components/setups/components/clause/clauses/clauses.component.html
@@ -1,5 +1,5 @@
 <div class="base-content-section setups">
-  <div class="container">
+
     <div class="col-md-12">
 
       <div class="row">
@@ -62,7 +62,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-xl-8">
-                  <label class="clause-label">New Cover type</label>
+                  <label class="clause-label">Details</label>
                 </div>
                 <div class="col-xl-4">
                   <a href="/" class="claus"><span class="clause-links">Report</span></a>
@@ -78,23 +78,23 @@
                 ></app-dynamic-form>-->
                 <form [formGroup]="clauseForm">
                   <div>
-                    <label><span class="clause-label">ID</span></label>
+                    <label class="mt-3"><span class="clause-label">ID</span></label>
                     <input class="form-control" type="text" formControlName="code" readonly>
                   </div>
                   <div>
-                    <label><span class="clause-label">Current</span></label>
-                    <select class="form-control" formControlName="isCurrent">
+                    <label class="mt-3"><span class="clause-label">Current</span></label>
+                    <select class="form-select" formControlName="isCurrent">
                       <option value="Y">Yes</option>
                       <option value="N">No</option>
                     </select>
                   </div>
                   <div>
-                    <label><span class="clause-label">Heading</span></label>
+                    <label class="mt-3"><span class="clause-label">Heading</span></label>
                     <input class="form-control" formControlName="heading">
                   </div>
                   <div>
-                    <label><span class="clause-label">Type</span></label>
-                    <select class="form-control" formControlName="type">
+                    <label class="mt-3"><span class="clause-label">Type</span></label>
+                    <select class="form-select" formControlName="type">
                       <option value="CL">Clause</option>
                       <option value="WA">Warranty</option>
                       <option value="SP">Special Conditions</option>
@@ -106,15 +106,15 @@
                     </select>
                   </div>
                   <div>
-                    <label><span class="clause-label">Clause Editable?</span></label>
-                    <select class="form-control" formControlName="isEditable">
+                    <label class="mt-3"><span class="clause-label">Clause Editable?</span></label>
+                    <select class="form-select" formControlName="isEditable">
                       <option value="Y">Yes</option>
                       <option value="N">No</option>
                     </select>
                   </div>
                   <div>
-                    <label><span class="clause-label">Wording</span></label>
-                    <textarea class="form-control" formControlName="wording" style="height: 26vh"></textarea>
+                    <label class="mt-3"><span class="clause-label">Wording</span></label>
+                    <textarea class="form-control" formControlName="wording" style="height: 15vh"></textarea>
                   </div>
                   <div class="row mt-4">
                     <div class="col-xl-6">
@@ -151,6 +151,5 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
 
